fix keeper modal bug not showing bulk-copy-to-library keeps; added stuff that shouldn't

--- a/kifi-backend/modules/shoebox/angular/src/keeps/keeps.styl
+++ b/kifi-backend/modules/shoebox/angular/src/keeps/keeps.styl
@@ -152,3 +152,9 @@
 
 .kf-add-keep-private-checkbox
   user-select: none
+
+.kf-empty-state
+  margin-left: 32px
+  margin-top: 25px
+  line-height: 2.7em
+  font-weight: 300
